Mit Colab erstellt

--- a/LOTTO_6aus49_Datei.ipynb
+++ b/LOTTO_6aus49_Datei.ipynb
@@ -198,7 +198,8 @@
         "ui_set_status(\"Bereit. Klicke auf <b>▶ Ausführen</b>.\", \"info\")"
       ],
       "metadata": {
-        "id": "KGB8fmWQD3he"
+        "id": "KGB8fmWQD3he",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -234,268 +235,101 @@
     {
       "cell_type": "code",
       "source": [
-        "# Konfiguration (Backend)\n",
-        "BACKEND_URL_DEFAULT = \"https://apilotto.euroceiling39.ru\"\n",
-        "\n",
-        "# Modellparameter (wie im Original)\n",
-        "model_params = {\n",
-        "    \"batch_size\": 98,\n",
-        "    \"epochs\": 123,\n",
-        "    \"window_length\": 24\n",
-        "}\n",
-        "\n",
-        "# ----------------------------\n",
-        "# Hilfsfunktionen\n",
-        "# ----------------------------\n",
-        "def download_and_parse_lotto():\n",
-        "    url = \"https://www.lotto-bayern.de/static/gamebroker_2/de/download_files/archiv_lotto.zip\"\n",
-        "    tmp_dir = \"/content/tmp_lotto\"\n",
-        "    os.makedirs(tmp_dir, exist_ok=True)\n",
-        "\n",
-        "    r = requests.get(url, timeout=60)\n",
-        "    if r.status_code != 200:\n",
-        "        raise RuntimeError(f\"Download fehlgeschlagen. Status: {r.status_code}\")\n",
-        "\n",
-        "    with zipfile.ZipFile(io.BytesIO(r.content)) as z:\n",
-        "        z.extractall(tmp_dir)\n",
-        "\n",
-        "    txt_path = os.path.join(tmp_dir, \"lotto.txt\")\n",
-        "    if not os.path.exists(txt_path):\n",
-        "        raise RuntimeError(\"lotto.txt nicht gefunden.\")\n",
-        "\n",
-        "    with open(txt_path, \"r\", encoding=\"utf-8\", errors=\"ignore\") as f:\n",
-        "        lines = f.readlines()\n",
-        "\n",
-        "    rows = []\n",
-        "    for line in lines[1:]:  # Kopfzeile überspringen\n",
-        "        parts = line.split()\n",
-        "        if len(parts) < 10:\n",
-        "            continue\n",
-        "\n",
-        "        tag, monat, jahr = parts[0], parts[1], parts[2]\n",
-        "        rest = parts[3:]\n",
-        "\n",
-        "        dt = datetime(int(jahr), int(monat), int(tag))\n",
-        "        if dt >= datetime(2013, 5, 4):\n",
-        "            datum = dt.strftime(\"%d.%m.%Y\")\n",
-        "            rest7 = rest[:7]  # 6 Zahlen + Superzahl\n",
-        "            if len(rest7) == 7:\n",
-        "                rows.append([datum] + rest7)\n",
-        "\n",
-        "    df = pd.DataFrame(rows, columns=[\"Datum\",\"Zahl1\",\"Zahl2\",\"Zahl3\",\"Zahl4\",\"Zahl5\",\"Zahl6\",\"Superzahl\"])\n",
-        "    for c in [\"Zahl1\",\"Zahl2\",\"Zahl3\",\"Zahl4\",\"Zahl5\",\"Zahl6\",\"Superzahl\"]:\n",
-        "        df[c] = pd.to_numeric(df[c], errors=\"coerce\")\n",
-        "\n",
-        "    return df.dropna().reset_index(drop=True)\n",
-        "\n",
-        "def preprocess_df(df):\n",
-        "    df_numbers = df.drop([\"Datum\", \"Superzahl\"], axis=1).copy()\n",
-        "    df_sorted = df_numbers.apply(lambda row: pd.Series(sorted(row.astype(int).tolist())), axis=1)\n",
-        "    return df_sorted\n",
-        "\n",
-        "def create_training_data(df_sorted, window_length):\n",
-        "    scaler = StandardScaler().fit(df_sorted)\n",
-        "    transformed_df = scaler.transform(df_sorted)\n",
-        "    n_rows, n_feat = df_sorted.shape\n",
-        "\n",
-        "    X = np.empty([n_rows - window_length, window_length, n_feat], dtype=float)\n",
-        "    y = np.empty([n_rows - window_length, n_feat], dtype=float)\n",
-        "\n",
-        "    for i in range(0, n_rows - window_length):\n",
-        "        X[i] = transformed_df[i : i + window_length, 0 : n_feat]\n",
-        "        y[i] = transformed_df[i + window_length : i + window_length + 1, 0 : n_feat]\n",
-        "\n",
-        "    return X, y, scaler\n",
-        "\n",
-        "def create_model(input_shape, learning_rate=0.001):\n",
-        "    model = Sequential()\n",
-        "    model.add(Bidirectional(LSTM(240, input_shape=input_shape, return_sequences=True)))\n",
-        "    model.add(Dropout(0.2))\n",
-        "    model.add(Bidirectional(LSTM(240, return_sequences=True)))\n",
-        "    model.add(Dropout(0.2))\n",
-        "    model.add(Bidirectional(LSTM(240, return_sequences=True)))\n",
-        "    model.add(Bidirectional(LSTM(240, return_sequences=False)))\n",
-        "    model.add(Dropout(0.2))\n",
-        "    model.add(Dense(49))\n",
-        "    model.add(Dense(input_shape[1]))\n",
-        "    model.compile(optimizer=Adam(learning_rate=learning_rate), loss=\"mse\", metrics=[\"accuracy\"])\n",
-        "    return model\n",
-        "\n",
-        "def predict_last_window(model, df_sorted, scaler, window_length):\n",
-        "    to_predict = df_sorted.tail(window_length)\n",
-        "    if to_predict.shape[0] < window_length:\n",
-        "        padding = np.zeros((window_length - to_predict.shape[0], to_predict.shape[1]))\n",
-        "        to_predict = np.vstack((padding, to_predict))\n",
-        "    else:\n",
-        "        to_predict = np.array(to_predict)\n",
-        "\n",
-        "    scaled_to_predict = scaler.transform(to_predict)\n",
-        "    y_pred = model.predict(np.array([scaled_to_predict]), verbose=0)\n",
-        "    predicted = scaler.inverse_transform(y_pred).astype(int)[0]\n",
-        "    return np.clip(predicted, 1, 49)\n",
-        "\n",
-        "def get_url_data():\n",
-        "    \"\"\"Liest userId und origin URL-Parameter via JavaScript aus.\"\"\"\n",
-        "    data = {\"userId\": None, \"origin\": BACKEND_URL_DEFAULT}\n",
+        "BACKEND_URL = \"https://apilotto.euroceiling39.ru\"\n",
+        "MODEL_PARAMS = {\"batch_size\": 98, \"epochs\": 123, \"window_length\": 24}\n",
+        "def log(msg): log_area.value = (log_area.value + msg + \"\\n\") if log_area.value else (msg + \"\\n\")\n",
+        "def clear_all(_=None):\n",
+        "    progress.value = 0\n",
+        "    with out_result: clear_output()\n",
+        "    log_area.value = \"\"\n",
+        "btn_clear.on_click(clear_all)\n",
+        "# --- Fetch Hash Params (Magic part) ---\n",
+        "def get_url_hash_params():\n",
         "    try:\n",
         "        from google.colab import output\n",
         "        js = \"\"\"\n",
         "        (function() {\n",
-        "          return window.location.search || \"\";\n",
+        "          var hash = window.location.hash.substring(1);\n",
+        "          var params = {};\n",
+        "          if(hash) {\n",
+        "            hash.split('&').forEach(function(part) {\n",
+        "               var item = part.split('=');\n",
+        "               if (item.length === 2) params[item[0]] = decodeURIComponent(item[1]);\n",
+        "            });\n",
+        "          }\n",
+        "          return params;\n",
         "        })();\n",
         "        \"\"\"\n",
-        "        q = output.eval_js(js)\n",
-        "        if q:\n",
-        "            params = up.parse_qs(q.lstrip(\"?\"))\n",
-        "            if \"userId\" in params:\n",
-        "                data[\"userId\"] = params[\"userId\"][0]\n",
-        "            if \"origin\" in params:\n",
-        "                data[\"origin\"] = params[\"origin\"][0]\n",
-        "    except Exception:\n",
-        "        pass\n",
-        "    return data\n",
+        "        return output.eval_js(js) or {}\n",
+        "    except: return {}\n",
+        "# --- Download & Model ---\n",
+        "def download_data():\n",
+        "    url = \"https://www.lotto-bayern.de/static/gamebroker_2/de/download_files/archiv_lotto.zip\"\n",
+        "    r = requests.get(url, timeout=30)\n",
+        "    with zipfile.ZipFile(io.BytesIO(r.content)) as z: z.extractall(\"/content/tmp\")\n",
+        "    rows = []\n",
+        "    with open(\"/content/tmp/lotto.txt\", \"r\", encoding=\"utf-8\", errors=\"ignore\") as f:\n",
+        "        for line in f.readlines()[1:]:\n",
+        "            p = line.split()\n",
+        "            if len(p)>10 and int(p[2])>=2013: rows.append(p[3:10])\n",
+        "    return pd.DataFrame(rows).apply(pd.to_numeric, errors='coerce').dropna()\n",
+        "def run_pipeline(_):\n",
+        "    # 1. AUTO-FILL ID Check\n",
+        "    if not txt_userid.value:\n",
+        "        params = get_url_hash_params()\n",
+        "        if \"userId\" in params:\n",
+        "            txt_userid.value = str(params[\"userId\"])\n",
         "\n",
-        "def send_to_backend(backend_url, payload):\n",
-        "    r = requests.post(f\"{backend_url}/api/colab/update\", json=payload, timeout=30)\n",
-        "    return r\n",
-        "\n",
-        "\n",
-        "class UIProgressCallback(Callback):\n",
-        "    def __init__(self, total_epochs, log_fn, progress_widget, base_progress=45, span=35):\n",
-        "        super().__init__()\n",
-        "        self.total_epochs = total_epochs\n",
-        "        self.log_fn = log_fn\n",
-        "        self.progress_widget = progress_widget\n",
-        "        self.base = base_progress\n",
-        "        self.span = span\n",
-        "\n",
-        "    def on_train_begin(self, logs=None):\n",
-        "        self.log_fn(\"Training gestartet…\")\n",
-        "\n",
-        "    def on_epoch_end(self, epoch, logs=None):\n",
-        "        logs = logs or {}\n",
-        "        ep = epoch + 1\n",
-        "        frac = ep / float(self.total_epochs)\n",
-        "        self.progress_widget.value = min(100, int(self.base + self.span * frac))\n",
-        "\n",
-        "\n",
-        "# ----------------------------\n",
-        "# Runner (wird vom Button aufgerufen)\n",
-        "# ----------------------------\n",
-        "def run_pipeline(_=None):\n",
-        "    progress.value = 0\n",
-        "    tabs.selected_index = 0  # \"Ergebnis\"\n",
-        "    with out_result:\n",
-        "        clear_output()\n",
-        "    log_area.value = \"\"\n",
-        "\n",
-        "    ui_set_status(\"Starte…\", \"info\")\n",
-        "    log(\"Starte Pipeline…\")\n",
+        "    user_id = txt_userid.value.strip()\n",
+        "    if not user_id:\n",
+        "        with out_result: print(\"⚠️ Kein User ID gefunden. Bitte Colab über App öffnen.\")\n",
+        "        return\n",
+        "    progress.value = 5\n",
+        "    log(f\"Starte für User ID: {user_id}\")\n",
         "\n",
         "    try:\n",
-        "        # 1. URL Parameter prüfen\n",
-        "        url_data = get_url_data()\n",
-        "        user_id = url_data[\"userId\"]\n",
-        "        backend_url = url_data[\"origin\"]\n",
+        "        df = download_data()\n",
+        "        vals = df.values; vals[:,:6] = np.sort(vals[:,:6], axis=1)\n",
+        "        scaler = StandardScaler().fit(vals); scaled = scaler.transform(vals)\n",
+        "        win = 24\n",
+        "        X = np.array([scaled[i:i+win] for i in range(len(scaled)-win)])\n",
+        "        y = np.array([scaled[i+win] for i in range(len(scaled)-win)])\n",
         "\n",
-        "        if user_id:\n",
-        "            log(f\"👤 User erkannt: ID {user_id}\")\n",
-        "        else:\n",
-        "            log(\"ℹ️ Kein User gefunden (Globaler Modus)\")\n",
+        "        progress.value = 30\n",
+        "        model = Sequential([\n",
+        "            Bidirectional(LSTM(128, return_sequences=True), input_shape=(win, 7)),\n",
+        "            Dropout(0.2), Bidirectional(LSTM(64)), Dense(7)\n",
+        "        ])\n",
+        "        model.compile(optimizer='adam', loss='mse')\n",
         "\n",
-        "        progress.value = 5\n",
-        "        ui_set_status(\"1/5 Lade Lotto-Daten (ZIP) und parse lotto.txt…\", \"info\")\n",
-        "        log(\"1/5 Download + Parse lotto.txt…\")\n",
-        "        df_raw = download_and_parse_lotto()\n",
+        "        class P(Callback):\n",
+        "            def on_epoch_end(s,e,l): progress.value = 30 + int(60 * (e/123))\n",
+        "\n",
+        "        log(\"Training...\")\n",
+        "        model.fit(X, y, epochs=123, batch_size=98, verbose=0, callbacks=[P()])\n",
+        "\n",
+        "        last = scaled[-win:].reshape(1, win, 7)\n",
+        "        pred = scaler.inverse_transform(model.predict(last))[0]\n",
+        "        nums = sorted([min(49, max(1, int(round(x)))) for x in pred[:6]])\n",
+        "        super_n = min(9, max(0, int(round(pred[6]))))\n",
         "\n",
         "        with out_result:\n",
-        "            print(\"✅ Daten geladen:\", df_raw.shape)\n",
-        "            display(df_raw.head())\n",
+        "            print(f\"✅ User {user_id}: {nums} (S: {super_n})\")\n",
         "\n",
-        "        progress.value = 20\n",
-        "        ui_set_status(\"2/5 Vorverarbeitung und Trainingsdaten erstellen…\", \"info\")\n",
-        "        log(\"2/5 Vorbereitung…\")\n",
-        "        df_sorted = preprocess_df(df_raw)\n",
-        "        X, y, scaler = create_training_data(df_sorted, model_params[\"window_length\"])\n",
-        "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.12, random_state=24)\n",
-        "\n",
-        "        progress.value = 35\n",
-        "        ui_set_status(\"3/5 Modell erstellen…\", \"info\")\n",
-        "        input_shape = (model_params[\"window_length\"], X.shape[2])\n",
-        "        model = create_model(input_shape)\n",
-        "\n",
-        "        model_params_runtime = dict(model_params)\n",
-        "        model_params_runtime.update({\n",
-        "            \"layers\": len(model.layers),\n",
-        "            \"optimizer\": str(model.optimizer),\n",
+        "        res = requests.post(f\"{BACKEND_URL}/api/colab/update\", json={\n",
+        "            \"userId\": user_id, \"numbers\": nums, \"generated_at\": int(time.time())\n",
         "        })\n",
-        "\n",
-        "        progress.value = 45\n",
-        "        ui_set_status(f\"4/5 Training läuft… ({model_params_runtime['epochs']} Epochen)\", \"warn\")\n",
-        "        log(f\"4/5 Training Deep Learning Models…\")\n",
-        "\n",
-        "        cb = UIProgressCallback(\n",
-        "            total_epochs=model_params_runtime[\"epochs\"],\n",
-        "            log_fn=log,\n",
-        "            progress_widget=progress,\n",
-        "            base_progress=45,\n",
-        "            span=35\n",
-        "        )\n",
-        "\n",
-        "        history = model.fit(\n",
-        "            x=X_train,\n",
-        "            y=y_train,\n",
-        "            batch_size=model_params_runtime[\"batch_size\"],\n",
-        "            epochs=model_params_runtime[\"epochs\"],\n",
-        "            verbose=0,\n",
-        "            callbacks=[cb]\n",
-        "        )\n",
-        "\n",
-        "        progress.value = 82\n",
-        "        ui_set_status(\"Training fertig. Evaluiere…\", \"info\")\n",
-        "        log(\"Training beendet. Berechne Scores…\")\n",
-        "        train_loss, train_accuracy = model.evaluate(X_train, y_train, verbose=0)\n",
-        "        test_loss, test_accuracy = model.evaluate(X_test, y_test, verbose=0)\n",
-        "\n",
-        "        predicted_numbers = predict_last_window(model, df_sorted, scaler, model_params_runtime[\"window_length\"])\n",
-        "\n",
-        "        with out_result:\n",
-        "            print(\"\\n📌 Metriken\")\n",
-        "            print(f\"Train Loss: {train_loss:.4f}, Train Acc: {train_accuracy:.4f}\")\n",
-        "            print(f\"Test  Loss: {test_loss:.4f},  Test  Acc: {test_accuracy:.4f}\")\n",
-        "            print(\"\\n🎯 Vorhergesagte Zahlen:\", predicted_numbers)\n",
-        "\n",
-        "        progress.value = 90\n",
-        "        ui_set_status(\"5/5 Sende Ergebnisse ans Backend…\", \"info\")\n",
-        "        log(f\"5/5 Sende an App ({backend_url})...\")\n",
-        "\n",
-        "        payload = {\n",
-        "            \"userId\": user_id,  # WICHTIG: User ID\n",
-        "            \"numbers\": predicted_numbers.tolist() if hasattr(predicted_numbers, \"tolist\") else list(predicted_numbers),\n",
-        "            \"train\": {\"loss\": float(train_loss), \"accuracy\": float(train_accuracy)},\n",
-        "            \"test\": {\"loss\": float(test_loss), \"accuracy\": float(test_accuracy)},\n",
-        "            \"model_params\": model_params_runtime,\n",
-        "            \"generated_at\": int(time.time()),\n",
-        "        }\n",
-        "\n",
-        "        resp = send_to_backend(backend_url, payload)\n",
-        "\n",
-        "        if resp.ok:\n",
-        "            ui_set_status(f\"✅ Gesendet! Schaue jetzt in deine App.\", \"success\")\n",
-        "            log(f\"✅ Erfolgreich gesendet! Status: {resp.status_code}\")\n",
-        "            progress.value = 100\n",
+        "        if res.ok:\n",
+        "            log(\"✅ Gesendet!\"); progress.value = 100\n",
+        "            with out_result: print(\"🚀 Erfolgreich an App übertragen!\")\n",
         "        else:\n",
-        "            ui_set_status(f\"❌ Server-Fehler: {resp.status_code}\", \"error\")\n",
-        "            log(f\"❌ Fehler beim Senden: {resp.text[:200]}\")\n",
-        "            progress.value = 100\n",
+        "            log(f\"Err: {res.text}\")\n",
         "\n",
-        "    except Exception as e:\n",
-        "        ui_set_status(f\"⚠️ Lauf fehlgeschlagen: <code>{str(e)}</code>\", \"error\")\n",
-        "        log(f\"CRITICAL ERROR: {e}\")\n",
-        "        progress.value = 100\n",
-        "\n",
+        "    except Exception as e: log(str(e))\n",
         "btn_run.on_click(run_pipeline)\n",
-        "ui_set_status(\"Bereit. Authentifiziert & Warten auf Start.\", \"info\")"
+        "# Try auto-detect immediately on load\n",
+        "params = get_url_hash_params()\n",
+        "if \"userId\" in params: txt_userid.value = str(params[\"userId\"])"
       ],
       "metadata": {
         "id": "k626fPm6Dihf"
