Mit Colab erstellt

--- a/LOTTO_6aus49_Datei.ipynb
+++ b/LOTTO_6aus49_Datei.ipynb
@@ -21,69 +21,59 @@
     {
       "cell_type": "code",
       "source": [
-        "# @title 📱 LOTTO CONTROL PANEL\n",
+        "# @title 🎮 START CONTROL PANEL\n",
         "import ipywidgets as widgets\n",
-        "from IPython.display import display, HTML, clear_output\n",
+        "from IPython.display import display, HTML\n",
         "\n",
-        "# ==========================================\n",
-        "# 1. UI DEFINITION (Das Interface)\n",
-        "# ==========================================\n",
-        "\n",
-        "# Styling\n",
-        "style = \"\"\"\n",
-        "<style>\n",
-        ".lotto-panel {\n",
-        "    background: #ffffff; border: 1px solid #e0e0e0; border-radius: 12px;\n",
-        "    padding: 15px; box-shadow: 0 4px 12px rgba(0,0,0,0.05); margin-bottom: 20px;\n",
-        "}\n",
-        ".lotto-header { font-size: 18px; font-weight: 700; color: #1a1a1a; margin-bottom: 12px; }\n",
-        ".lotto-controls { display: flex; gap: 10px; align-items: center; flex-wrap: wrap; }\n",
-        ".lotto-status { margin-top: 10px; font-size: 13px; color: #666; }\n",
-        "</style>\n",
-        "\"\"\"\n",
+        "# UI definieren\n",
+        "style = \"\"\"<style>.lotto-box{background:#f8f9fa;padding:15px;border-radius:10px;border:1px solid #ddd;}.lbl{font-weight:bold;font-size:16px;margin-bottom:10px;display:block;}</style>\"\"\"\n",
         "display(HTML(style))\n",
         "\n",
-        "# Widgets\n",
-        "lbl_title = widgets.HTML('<div class=\"lotto-header\">🎲 LOTTO 6aus49 Runner</div>')\n",
+        "lbl = widgets.HTML('<span class=\"lbl\">🎲 LOTTO 6aus49 KI-Generator</span>')\n",
+        "txt_uid = widgets.Text(placeholder=\"User ID (Auto)\", description=\"🆔 ID:\", layout=widgets.Layout(width='200px'))\n",
+        "btn_go = widgets.Button(description=\"Start Pipeline\", button_style='success', icon='rocket', layout=widgets.Layout(width='150px'))\n",
+        "out_log = widgets.Output(layout={'border':'1px solid #ccc','height':'150px','overflow':'auto','margin_top':'10px'})\n",
+        "progress = widgets.IntProgress(value=0, max=100, layout=widgets.Layout(width='100%'))\n",
         "\n",
-        "txt_userid = widgets.Text(\n",
-        "    value=\"\", placeholder=\"User ID (Auto)\", description=\"🆔 ID:\",\n",
-        "    layout=widgets.Layout(width=\"200px\")\n",
-        ")\n",
+        "# Logik-Verbindung (\"Bridge\" variables for next cell)\n",
+        "global_ui = {\n",
+        "    \"btn\": btn_go, \"txt\": txt_uid, \"log\": out_log, \"bar\": progress\n",
+        "}\n",
         "\n",
-        "btn_run = widgets.Button(\n",
-        "    description=\"▶ Start Analysis\",\n",
-        "    button_style=\"success\", # gruen\n",
-        "    icon=\"play\",\n",
-        "    layout=widgets.Layout(width=\"160px\", height=\"36px\")\n",
-        ")\n",
+        "def on_click_wrapper(b):\n",
+        "    # Diese Funktion wird später von Zelle 2 überschrieben/genutzt\n",
+        "    if 'run_lotto_logic' in globals():\n",
+        "        globals()['run_lotto_logic'](global_ui)\n",
+        "    else:\n",
+        "        with out_log: print(\"⚠️ Bitte Zelle 2 (Code) auch ausführen!\")\n",
         "\n",
-        "btn_stop = widgets.Button(description=\"⏹\", button_style=\"danger\", layout=widgets.Layout(width=\"40px\"))\n",
+        "btn_go.on_click(on_click_wrapper)\n",
         "\n",
-        "progress = widgets.IntProgress(\n",
-        "    value=0, min=0, max=100,\n",
-        "    description=\"\", bar_style=\"info\",\n",
-        "    layout=widgets.Layout(width=\"100%\", height=\"8px\", margin=\"10px 0\")\n",
-        ")\n",
+        "# Anzeigen\n",
+        "display(widgets.VBox([lbl, widgets.HBox([txt_uid, btn_go]), progress, out_log])) # .add_class('lotto-box')\n",
         "\n",
-        "out_log = widgets.Output(layout={'border': '1px solid #eee', 'height': '200px', 'overflow_y': 'scroll', 'padding': '8px'})\n",
-        "\n",
-        "# Container setup\n",
-        "ui_container = widgets.VBox([\n",
-        "    lbl_title,\n",
-        "    widgets.HBox([txt_userid, btn_run, btn_stop]),\n",
-        "    progress,\n",
-        "    out_log\n",
-        "])\n",
-        "ui_container.add_class(\"lotto-panel\")\n",
-        "\n",
-        "# --- ANZEIGEN (Ganz oben!) ---\n",
-        "display(ui_container)\n",
-        "\n",
-        "\n",
-        "# ==========================================\n",
-        "# 2. LOGIC & IMPORTS (Der \"Motor\")\n",
-        "# ==========================================\n",
+        "# Auto-ID Check (JS Hack)\n",
+        "from google.colab import output\n",
+        "js = \"\"\"(function(){\n",
+        "  var h=window.location.hash.slice(1);\n",
+        "  var p={}; h.split('&').forEach(function(v){var i=v.split('=');p[i[0]]=i[1];});\n",
+        "  return p.userId || \"\";\n",
+        "})();\"\"\"\n",
+        "try:\n",
+        "    uid_found = output.eval_js(js)\n",
+        "    if uid_found: txt_uid.value = str(uid_found)\n",
+        "except: pass"
+      ],
+      "metadata": {
+        "id": "W77CwrLaig_t"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# @title ⚙️ CORE SYSTEM (Must actviate once)\n",
         "import time, requests, json, zipfile, io, os\n",
         "import numpy as np\n",
         "import pandas as pd\n",
@@ -92,54 +82,35 @@
         "from tensorflow.keras.layers import LSTM, Dense, Bidirectional, Dropout\n",
         "from tensorflow.keras.callbacks import Callback\n",
         "\n",
-        "BACKEND_URL = \"https://apilotto.euroceiling39.ru\"\n",
+        "BACKEND = \"https://apilotto.euroceiling39.ru\"\n",
         "\n",
-        "def log(msg, clear=False):\n",
-        "    if clear: out_log.clear_output()\n",
-        "    with out_log:\n",
-        "        print(f\"[{time.strftime('%H:%M:%S')}] {msg}\")\n",
+        "def run_lotto_logic(ui):\n",
+        "    btn, txt, log_out, bar = ui['btn'], ui['txt'], ui['log'], ui['bar']\n",
         "\n",
-        "def get_hash_params():\n",
-        "    try:\n",
-        "        from google.colab import output\n",
-        "        js = \"\"\"(function(){\n",
-        "          var h=window.location.hash.slice(1); var p={};\n",
-        "          h.split('&').forEach(function(v){ var i=v.split('='); p[i[0]]=decodeURIComponent(i[1]); });\n",
-        "          return p;\n",
-        "        })();\"\"\"\n",
-        "        return output.eval_js(js) or {}\n",
-        "    except: return {}\n",
+        "    btn.disabled = True\n",
+        "    bar.value = 0\n",
+        "    log_out.clear_output()\n",
         "\n",
-        "def pipeline(b):\n",
-        "    # 1. Setup\n",
-        "    btn_run.disabled = True\n",
-        "    progress.value = 0\n",
-        "    log(\"🚀 Starte Prozess...\", clear=True)\n",
+        "    def log(m):\n",
+        "        with log_out: print(f\"[{time.strftime('%H:%M:%S')}] {m}\")\n",
         "\n",
-        "    # Auto-ID Check if empty\n",
-        "    if not txt_userid.value:\n",
-        "        p = get_hash_params()\n",
-        "        if \"userId\" in p: txt_userid.value = str(p[\"userId\"])\n",
-        "\n",
-        "    uid = txt_userid.value.strip()\n",
+        "    uid = txt.value.strip()\n",
         "    if not uid:\n",
-        "        log(\"❌ FEHLER: Keine User ID! Bitte Link aus der App benutzen.\");\n",
-        "        btn_run.disabled = False\n",
+        "        log(\"❌ FEHLER: Keine User ID!\")\n",
+        "        btn.disabled = False\n",
         "        return\n",
         "\n",
         "    try:\n",
-        "        # 2. Download\n",
-        "        progress.value = 10\n",
-        "        log(f\"👤 User: {uid}\")\n",
-        "        log(\"📥 Lade Lotto-Archiv...\")\n",
+        "        log(f\"🚀 Starte für User: {uid}\")\n",
+        "        bar.value = 5\n",
         "\n",
+        "        # 1. Daten laden\n",
+        "        log(\"📥 Lade Archiv...\")\n",
         "        r = requests.get(\"https://www.lotto-bayern.de/static/gamebroker_2/de/download_files/archiv_lotto.zip\", timeout=30)\n",
-        "        with zipfile.ZipFile(io.BytesIO(r.content)) as z: z.extractall(\"/content/tmp\")\n",
+        "        with zipfile.ZipFile(io.BytesIO(r.content)) as z: z.extractall(\"/content/lotto_temp\")\n",
         "\n",
-        "        # 3. Parse\n",
-        "        log(\"📊 Verarbeite Daten...\")\n",
-        "        rows = []\n",
-        "        with open(\"/content/tmp/lotto.txt\", \"r\", encoding=\"utf-8\", errors=\"ignore\") as f:\n",
+        "        rows=[]\n",
+        "        with open(\"/content/lotto_temp/lotto.txt\", \"r\", encoding=\"utf-8\", errors=\"ignore\") as f:\n",
         "            for l in f.readlines()[1:]:\n",
         "                p = l.split()\n",
         "                if len(p)>10 and int(p[2])>=2013: rows.append(p[3:10])\n",
@@ -147,13 +118,13 @@
         "        df = pd.DataFrame(rows).apply(pd.to_numeric, errors='coerce').dropna()\n",
         "        vals = df.values; vals[:,:6] = np.sort(vals[:,:6], axis=1)\n",
         "\n",
-        "        # 4. Train Model\n",
-        "        progress.value = 30\n",
-        "        log(\"🧠 Starte KI-Training (TensorFlow)...\")\n",
+        "        # 2. Training\n",
+        "        log(\"🧠 Training KI Modell...\")\n",
+        "        bar.value = 20\n",
         "\n",
         "        scaler = StandardScaler().fit(vals)\n",
         "        scaled = scaler.transform(vals)\n",
-        "        win=24\n",
+        "        win = 24\n",
         "        X = np.array([scaled[i:i+win] for i in range(len(scaled)-win)])\n",
         "        y = np.array([scaled[i+win] for i in range(len(scaled)-win)])\n",
         "\n",
@@ -163,47 +134,39 @@
         "        ])\n",
         "        model.compile(optimizer='adam', loss='mse')\n",
         "\n",
-        "        # Custom Callback for Progress Bar\n",
-        "        class Prog(Callback):\n",
-        "            def on_epoch_end(s,e,l): progress.value = 30 + int(60 * (e/60))\n",
+        "        class P(Callback):\n",
+        "            def on_epoch_end(s,e,l): bar.value = 20 + int(70 * (e/60))\n",
         "\n",
-        "        model.fit(X, y, epochs=60, batch_size=64, verbose=0, callbacks=[Prog()])\n",
+        "        model.fit(X, y, epochs=60, batch_size=64, verbose=0, callbacks=[P()])\n",
         "\n",
-        "        # 5. Predict\n",
+        "        # 3. Prognose\n",
         "        last = scaled[-win:].reshape(1,win,7)\n",
         "        pred = scaler.inverse_transform(model.predict(last))[0]\n",
         "        nums = sorted([min(49,max(1,int(round(x)))) for x in pred[:6]])\n",
         "        sz = min(9,max(0,int(round(pred[6]))))\n",
         "\n",
-        "        log(f\"✅ Prognose: {nums} (SZ: {sz})\")\n",
+        "        log(f\"✅ Prognose: {nums} [SZ: {sz}]\")\n",
+        "        bar.value = 95\n",
         "\n",
-        "        # 6. Send\n",
-        "        log(f\"📡 Sende an App ({BACKEND_URL})...\")\n",
-        "        res = requests.post(f\"{BACKEND_URL}/api/colab/update\", json={\n",
+        "        # 4. Senden\n",
+        "        log(\"📡 Sende an App...\")\n",
+        "        res = requests.post(f\"{BACKEND}/api/colab/update\", json={\n",
         "            \"userId\": uid, \"numbers\": nums, \"generated_at\": int(time.time())\n",
         "        })\n",
         "\n",
         "        if res.ok:\n",
-        "            log(\"🎉 ERFOLG! Daten übertragen.\")\n",
-        "            progress.value = 100\n",
+        "            log(\"🎉 ERFOLG! Daten in App verfügbar.\")\n",
+        "            bar.value = 100\n",
         "        else:\n",
         "            log(f\"⚠️ Server Fehler: {res.status_code}\")\n",
         "\n",
         "    except Exception as e:\n",
-        "        log(f\"💥 Critical Error: {str(e)}\")\n",
+        "        log(f\"Error: {e}\")\n",
         "\n",
-        "    btn_run.disabled = False\n",
-        "\n",
-        "# Linking\n",
-        "btn_run.on_click(pipeline)\n",
-        "btn_stop.on_click(lambda b: log(\"Stop requested (not impl)\"))\n",
-        "\n",
-        "# Auto-Run ID Check on Load\n",
-        "p = get_hash_params()\n",
-        "if \"userId\" in p: txt_userid.value = str(p[\"userId\"])"
+        "    btn.disabled = False"
       ],
       "metadata": {
-        "id": "QiuH7ISJiAgZ"
+        "id": "HqZ8ZN-7ih93"
       },
       "execution_count": null,
       "outputs": []
