--- a/LOTTO_6aus49_Datei.ipynb
+++ b/LOTTO_6aus49_Datei.ipynb
@@ -21,11 +21,11 @@
     {
       "cell_type": "code",
       "source": [
-        "# @title 🎮 START CONTROL PANEL\n",
+        "# @title 🎮 START CONTROL PANEL (Debug Enhanced)\n",
         "import ipywidgets as widgets\n",
         "from IPython.display import display, HTML\n",
         "\n",
-        "# UI definieren\n",
+        "# UI\n",
         "style = \"\"\"<style>.lotto-box{background:#f8f9fa;padding:15px;border-radius:10px;border:1px solid #ddd;}.lbl{font-weight:bold;font-size:16px;margin-bottom:10px;display:block;}</style>\"\"\"\n",
         "display(HTML(style))\n",
         "\n",
@@ -35,34 +35,55 @@
         "out_log = widgets.Output(layout={'border':'1px solid #ccc','height':'150px','overflow':'auto','margin_top':'10px'})\n",
         "progress = widgets.IntProgress(value=0, max=100, layout=widgets.Layout(width='100%'))\n",
         "\n",
-        "# Logik-Verbindung (\"Bridge\" variables for next cell)\n",
-        "global_ui = {\n",
-        "    \"btn\": btn_go, \"txt\": txt_uid, \"log\": out_log, \"bar\": progress\n",
-        "}\n",
+        "# Bridge\n",
+        "global_ui = { \"btn\": btn_go, \"txt\": txt_uid, \"log\": out_log, \"bar\": progress }\n",
         "\n",
         "def on_click_wrapper(b):\n",
-        "    # Diese Funktion wird später von Zelle 2 überschrieben/genutzt\n",
-        "    if 'run_lotto_logic' in globals():\n",
-        "        globals()['run_lotto_logic'](global_ui)\n",
-        "    else:\n",
-        "        with out_log: print(\"⚠️ Bitte Zelle 2 (Code) auch ausführen!\")\n",
+        "    if 'run_lotto_logic' in globals(): globals()['run_lotto_logic'](global_ui)\n",
+        "    else: with out_log: print(\"⚠️ Bitte Zelle 2 (Code) auch ausführen!\")\n",
         "\n",
         "btn_go.on_click(on_click_wrapper)\n",
         "\n",
-        "# Anzeigen\n",
-        "display(widgets.VBox([lbl, widgets.HBox([txt_uid, btn_go]), progress, out_log])) # .add_class('lotto-box')\n",
+        "display(widgets.VBox([lbl, widgets.HBox([txt_uid, btn_go]), progress, out_log]))\n",
         "\n",
-        "# Auto-ID Check (JS Hack)\n",
+        "# --- STRONG AUTO DETECT ---\n",
         "from google.colab import output\n",
-        "js = \"\"\"(function(){\n",
-        "  var h=window.location.hash.slice(1);\n",
-        "  var p={}; h.split('&').forEach(function(v){var i=v.split('=');p[i[0]]=i[1];});\n",
-        "  return p.userId || \"\";\n",
-        "})();\"\"\"\n",
+        "js_debug = \"\"\"\n",
+        "(function(){\n",
+        "  try {\n",
+        "      var url = window.location.href;\n",
+        "      var hash = window.location.hash;\n",
+        "      return {url: url, hash: hash};\n",
+        "  } catch(e) { return {error: e.toString()}; }\n",
+        "})();\n",
+        "\"\"\"\n",
+        "\n",
         "try:\n",
-        "    uid_found = output.eval_js(js)\n",
-        "    if uid_found: txt_uid.value = str(uid_found)\n",
-        "except: pass"
+        "    # 1. Try to read\n",
+        "    data = output.eval_js(js_debug)\n",
+        "\n",
+        "    # 2. Parse Logic\n",
+        "    hash_str = data.get('hash', '')\n",
+        "    found_id = \"\"\n",
+        "\n",
+        "    # Parse #userId=123\n",
+        "    if 'userId=' in hash_str:\n",
+        "        parts = hash_str.split('userId=')\n",
+        "        if len(parts) > 1:\n",
+        "            found_id = parts[1].split('&')[0]\n",
+        "\n",
+        "    if found_id:\n",
+        "        txt_uid.value = str(found_id)\n",
+        "        with out_log: print(f\"✅ Auto-Login: User {found_id}\")\n",
+        "    else:\n",
+        "        with out_log:\n",
+        "            print(\"ℹ️ Kein User ID im Link gefunden.\")\n",
+        "            print(f\"Debug URL: {data.get('url')}\")\n",
+        "            print(f\"Debug Hash: {data.get('hash')}\")\n",
+        "            print(\"👉 Bitte öffnen Sie Colab über den Link in der App!\")\n",
+        "\n",
+        "except Exception as e:\n",
+        "    with out_log: print(f\"Debug Error: {e}\")"
       ],
       "metadata": {
         "id": "20ACDMrZi0o_"
@@ -73,39 +94,16 @@
     {
       "cell_type": "code",
       "source": [
-        "# @title ⚙️ CORE SYSTEM (Original Power Model)\n",
+        "# @title ⚙️ CORE SYSTEM (Must actviate once)\n",
         "import time, requests, json, zipfile, io, os\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "from tensorflow.keras.models import Sequential\n",
         "from tensorflow.keras.layers import LSTM, Dense, Bidirectional, Dropout\n",
-        "from tensorflow.keras.optimizers import Adam\n",
         "from tensorflow.keras.callbacks import Callback\n",
         "\n",
         "BACKEND = \"https://apilotto.euroceiling39.ru\"\n",
-        "\n",
-        "# --- ORIIGNAL POWER MODEL ---\n",
-        "def create_model(input_shape, learning_rate=0.001):\n",
-        "    model = Sequential()\n",
-        "    # Layer 1\n",
-        "    model.add(Bidirectional(LSTM(240, input_shape=input_shape, return_sequences=True)))\n",
-        "    model.add(Dropout(0.2))\n",
-        "    # Layer 2\n",
-        "    model.add(Bidirectional(LSTM(240, return_sequences=True)))\n",
-        "    model.add(Dropout(0.2))\n",
-        "    # Layer 3\n",
-        "    model.add(Bidirectional(LSTM(240, return_sequences=True)))\n",
-        "    # Layer 4\n",
-        "    model.add(Bidirectional(LSTM(240, return_sequences=False)))\n",
-        "    model.add(Dropout(0.2))\n",
-        "\n",
-        "    # Output Layers\n",
-        "    model.add(Dense(49))              # Intermediate Dense\n",
-        "    model.add(Dense(input_shape[1]))   # Final Output (7 numbers: 6 + Super)\n",
-        "\n",
-        "    model.compile(optimizer=Adam(learning_rate=learning_rate), loss=\"mse\", metrics=[\"accuracy\"])\n",
-        "    return model\n",
         "\n",
         "def run_lotto_logic(ui):\n",
         "    btn, txt, log_out, bar = ui['btn'], ui['txt'], ui['log'], ui['bar']\n",
@@ -119,14 +117,16 @@
         "\n",
         "    uid = txt.value.strip()\n",
         "    if not uid:\n",
-        "        log(\"❌ FEHLER: Keine User ID!\"); btn.disabled = False; return\n",
+        "        log(\"❌ FEHLER: Keine User ID!\")\n",
+        "        btn.disabled = False\n",
+        "        return\n",
         "\n",
         "    try:\n",
-        "        log(f\"🚀 Starte Heavy Analyse für: {uid}\")\n",
+        "        log(f\"🚀 Starte für User: {uid}\")\n",
         "        bar.value = 5\n",
         "\n",
         "        # 1. Daten laden\n",
-        "        log(\"📥 Lade 10 Jahre Archivdaten...\")\n",
+        "        log(\"📥 Lade Archiv...\")\n",
         "        r = requests.get(\"https://www.lotto-bayern.de/static/gamebroker_2/de/download_files/archiv_lotto.zip\", timeout=30)\n",
         "        with zipfile.ZipFile(io.BytesIO(r.content)) as z: z.extractall(\"/content/lotto_temp\")\n",
         "\n",
@@ -137,11 +137,11 @@
         "                if len(p)>10 and int(p[2])>=2013: rows.append(p[3:10])\n",
         "\n",
         "        df = pd.DataFrame(rows).apply(pd.to_numeric, errors='coerce').dropna()\n",
-        "        vals = df.values; vals[:,:6] = np.sort(vals[:,:6], axis=1) # Sort 6 main numbers\n",
+        "        vals = df.values; vals[:,:6] = np.sort(vals[:,:6], axis=1)\n",
         "\n",
-        "        # 2. Preprocessing\n",
-        "        bar.value = 15\n",
-        "        log(\"⚙️ Preprocessing & Windowing (Win=24)...\")\n",
+        "        # 2. Training\n",
+        "        log(\"🧠 Training KI Modell...\")\n",
+        "        bar.value = 20\n",
         "\n",
         "        scaler = StandardScaler().fit(vals)\n",
         "        scaled = scaler.transform(vals)\n",
@@ -149,58 +149,40 @@
         "        X = np.array([scaled[i:i+win] for i in range(len(scaled)-win)])\n",
         "        y = np.array([scaled[i+win] for i in range(len(scaled)-win)])\n",
         "\n",
-        "        # 3. Model Build\n",
-        "        log(\"🏗️ Baue Deep Learning Architektur (4x Bidirectional LSTM)...\")\n",
-        "        input_shape = (win, 7)\n",
-        "        model = create_model(input_shape)\n",
-        "\n",
-        "        # 4. Training (Heavy)\n",
-        "        EPOCHS = 123\n",
-        "        BATCH = 98\n",
+        "        model = Sequential([\n",
+        "            Bidirectional(LSTM(128, return_sequences=True), input_shape=(win,7)),\n",
+        "            Dropout(0.2), Bidirectional(LSTM(64)), Dense(7)\n",
+        "        ])\n",
+        "        model.compile(optimizer='adam', loss='mse')\n",
         "\n",
         "        class P(Callback):\n",
-        "            def on_epoch_end(s,e,l):\n",
-        "                pct = int(20 + 75 * ((e+1)/EPOCHS))\n",
-        "                bar.value = pct\n",
-        "                if e % 20 == 0: log(f\"   Epoch {e+1}/{EPOCHS} loss={l['loss']:.4f}\")\n",
+        "            def on_epoch_end(s,e,l): bar.value = 20 + int(70 * (e/60))\n",
         "\n",
-        "        log(f\"🧠 Starte Training ({EPOCHS} Epochen)... Geduld bitte.\")\n",
-        "        model.fit(X, y, epochs=EPOCHS, batch_size=BATCH, verbose=0, callbacks=[P()])\n",
+        "        model.fit(X, y, epochs=60, batch_size=64, verbose=0, callbacks=[P()])\n",
         "\n",
-        "        # 5. Prognose\n",
-        "        log(\"🔮 Berechne Vorhersage...\")\n",
-        "        last_window = scaled[-win:].reshape(1, win, 7)\n",
-        "        pred_scaled = model.predict(last_window)\n",
-        "        pred = scaler.inverse_transform(pred_scaled)[0]\n",
+        "        # 3. Prognose\n",
+        "        last = scaled[-win:].reshape(1,win,7)\n",
+        "        pred = scaler.inverse_transform(model.predict(last))[0]\n",
+        "        nums = sorted([min(49,max(1,int(round(x)))) for x in pred[:6]])\n",
+        "        sz = min(9,max(0,int(round(pred[6]))))\n",
         "\n",
-        "        # Post-Processing (Runden & Bounds)\n",
-        "        nums = [int(round(x)) for x in pred[:6]]\n",
-        "        nums = sorted([min(49, max(1, x)) for x in nums]) # 1-49\n",
-        "        sz = min(9, max(0, int(round(pred[6]))))   # 0-9\n",
+        "        log(f\"✅ Prognose: {nums} [SZ: {sz}]\")\n",
+        "        bar.value = 95\n",
         "\n",
-        "        log(f\"✅ ERGEBNIS: {nums} [Super: {sz}]\")\n",
-        "        bar.value = 98\n",
-        "\n",
-        "        # 6. Senden\n",
-        "        log(f\"📡 Upload zu App...\")\n",
-        "        final_nums = nums\n",
-        "\n",
-        "        payload = {\n",
-        "            \"userId\": uid,\n",
-        "            \"numbers\": final_nums,\n",
-        "            \"generated_at\": int(time.time()),\n",
-        "            \"model\": \"LSTM-Deep-v1\"\n",
-        "        }\n",
-        "        res = requests.post(f\"{BACKEND}/api/colab/update\", json=payload)\n",
+        "        # 4. Senden\n",
+        "        log(\"📡 Sende an App...\")\n",
+        "        res = requests.post(f\"{BACKEND}/api/colab/update\", json={\n",
+        "            \"userId\": uid, \"numbers\": nums, \"generated_at\": int(time.time())\n",
+        "        })\n",
         "\n",
         "        if res.ok:\n",
-        "            log(\"🎉 ERFOLG! Deine Zahlen sind in der App.\")\n",
+        "            log(\"🎉 ERFOLG! Daten in App verfügbar.\")\n",
         "            bar.value = 100\n",
         "        else:\n",
         "            log(f\"⚠️ Server Fehler: {res.status_code}\")\n",
         "\n",
         "    except Exception as e:\n",
-        "        log(f\"💥 CRITICAL ERROR: {e}\")\n",
+        "        log(f\"Error: {e}\")\n",
         "\n",
         "    btn.disabled = False"
       ],
