Mit Colab erstellt

--- a/LOTTO_6aus49_Datei.ipynb
+++ b/LOTTO_6aus49_Datei.ipynb
@@ -39,8 +39,11 @@
         "global_ui = { \"btn\": btn_go, \"txt\": txt_uid, \"log\": out_log, \"bar\": progress }\n",
         "\n",
         "def on_click_wrapper(b):\n",
-        "    if 'run_lotto_logic' in globals(): globals()['run_lotto_logic'](global_ui)\n",
-        "    else: with out_log: print(\"⚠️ Bitte Zelle 2 (Code) auch ausführen!\")\n",
+        "    if 'run_lotto_logic' in globals():\n",
+        "        globals()['run_lotto_logic'](global_ui)\n",
+        "    else:\n",
+        "        with out_log:\n",
+        "            print(\"⚠️ Bitte Zelle 2 (Code) auch ausführen!\")\n",
         "\n",
         "btn_go.on_click(on_click_wrapper)\n",
         "\n",
@@ -78,18 +81,31 @@
         "    else:\n",
         "        with out_log:\n",
         "            print(\"ℹ️ Kein User ID im Link gefunden.\")\n",
-        "            print(f\"Debug URL: {data.get('url')}\")\n",
-        "            print(f\"Debug Hash: {data.get('hash')}\")\n",
+        "            # print(f\"Debug URL: {data.get('url')}\") # Optional for debug\n",
         "            print(\"👉 Bitte öffnen Sie Colab über den Link in der App!\")\n",
         "\n",
         "except Exception as e:\n",
         "    with out_log: print(f\"Debug Error: {e}\")"
       ],
       "metadata": {
-        "id": "20ACDMrZi0o_"
+        "id": "20ACDMrZi0o_",
+        "outputId": "32a94bdc-912f-4505-c7ae-c2ff712131df",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 109
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (ipython-input-1391526803.py, line 20)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-1391526803.py\"\u001b[0;36m, line \u001b[0;32m20\u001b[0m\n\u001b[0;31m    else: with out_log: print(\"⚠️ Bitte Zelle 2 (Code) auch ausführen!\")\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
